--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,76 @@
+<resources>
+    <string name="app_name">NFC Smart Notice Board</string>
+    <string name="intro_message">This is a simple app to read various tags (NDEF, RFID, FeliCa, ISO 14443, etc).\n\nYou use it by holding a tag/card against the back of your device.\n\nPlease let me know if you want me to change how the data is displayed. Also send me an e-mail (adam@anyro.se) if you have any problems with the app and I\'ll let you know when I\'ve fixed it. You can also see the source code and report issues at https://github.com/nadam/nfc-reader.\n\nIf you can\'t read any tag, please try some of the other NFC apps on Google Play and let me know if this app is the only one not working. Thanks!\n\n/Adam</string>
+    <string name="error">Error</string>
+    <string name="no_nfc">No NFC found on this device</string>
+    <string name="nfc_disabled">NFC is not enabled. Please go to the wireless settings to enable it.</string>
+    <string name="menu_main_clear_title">Clear all</string>
+    <string name="menu_main_copy">Copy IDs</string>
+    <string name="menu_copy_hex">Hex</string>
+    <string name="menu_copy_reversed_hex">Reversed hex</string>
+    <string name="menu_copy_dec">Dec</string>
+    <string name="menu_copy_reversed_dec">Reversed dec</string>
+    <string name="nothing_scanned">Nothing scanned yet</string>
 
 
-    <resources>
-        <string name="app_name">NFC Reader</string>
-        <string name="intro_message">This is a simple app to read various tags (NDEF, RFID, FeliCa, ISO 14443, etc).\n\nYou use it by holding a tag/card against the back of your device.\n\nPlease let me know if you want me to change how the data is displayed. Also send me an e-mail (adam@anyro.se) if you have any problems with the app and I\'ll let you know when I\'ve fixed it. You can also see the source code and report issues at https://github.com/nadam/nfc-reader.\n\nIf you can\'t read any tag, please try some of the other NFC apps on Google Play and let me know if this app is the only one not working. Thanks!\n\n/Adam</string>
-        <string name="error">Error</string>
-        <string name="no_nfc">No NFC found on this device</string>
-        <string name="nfc_disabled">NFC is not enabled. Please go to the wireless settings to enable it.</string>
-        <string name="menu_main_clear_title">Clear all</string>
-        <string name="menu_main_copy">Copy IDs</string>
-        <string name="menu_copy_hex">Hex</string>
-        <string name="menu_copy_reversed_hex">Reversed hex</string>
-        <string name="menu_copy_dec">Dec</string>
-        <string name="menu_copy_reversed_dec">Reversed dec</string>
-        <string name="nothing_scanned">Nothing scanned yet</string>
-    </resources>
+
+        <string name="label_google_sign_in">Firebase + Google Sign In</string>
+        <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
+
+        <string name="label_facebook_login">Firebase + Facebook Login</string>
+        <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
+
+        <string name="label_twitter_login">Firebase + Twitter Login</string>
+        <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
+
+        <string name="label_emailpassword">Email/Password Authentication</string>
+        <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
+
+        <string name="label_anonymous_auth">Anonymous Authentication</string>
+        <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
+
+        <string name="label_custom_auth">Custom Authentication</string>
+        <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
+
+        <string name="label_firebase_ui">FirebaseUI Auth</string>
+        <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
+
+        <string name="hint_user_id">User ID</string>
+        <string name="get_custom_token">Get Token</string>
+        <string name="sign_in">Sign In</string>
+        <string name="create_account">Create Account</string>
+        <string name="sign_out">Sign Out</string>
+        <string name="verify_email">Verify Email</string>
+        <string name="disconnect">Disconnect</string>
+        <string name="loading">Loading…</string>
+        <string name="custom_token">Custom Token</string>
+        <string name="signed_out">Signed Out</string>
+        <string name="token_null">Token: null</string>
+        <string name="hint_email">Email</string>
+        <string name="hint_password">Password</string>
+        <string name="desc_firebase_lockup">Firebase logo and name</string>
+        <string name="auth_failed">Authentication failed</string>
+
+        <string name="firebase_status_fmt">Firebase User: %s</string>
+        <string name="firebase_user_management">Firebase User Management</string>
+
+        <string name="google_status_fmt">Google User: %s</string>
+        <string name="google_title_text">Google Sign In</string>
+
+        <string name="facebook_status_fmt">Facebook User: %s</string>
+        <string name="facebook_title_text">Facebook Login</string>
+
+        <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
+        <string name="emailpassword_title_text">NFC Smart Notice Board</string>
+
+        <string name="twitter_status_fmt">Twitter User: %s</string>
+        <string name="twitter_title_text">Twitter Login</string>
+
+        <string name="firebaseui_status_fmt">Firebase User: %s</string>
+        <string name="firebaseui_title_text">FirebaseUI Auth</string>
+
+        <string name="id_fmt">User ID: %s</string>
+        <string name="email_fmt">Email: %s</string>
+</resources>
 
 
